Fix table wrap issue

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -72,3 +72,9 @@ input:-webkit-autofill:focus {
 .tab-group > .tabcontent ~ .tabcontent {
   display: none;
 }
+
+table {
+  white-space: nowrap;
+  overflow-x: auto;
+  display: block;
+}
